fixed alignment for numbers in subscription plans, added scroll effect for subscribe button on home page

--- a/style.css
+++ b/style.css
@@ -93,9 +93,10 @@ nav{
     width: 14vw;
     justify-content: space-between;
 }
-.navbuttons a{
+.navbuttons a, #subscribe_pagelink{
     text-decoration: none;
     color: white;
+    cursor: pointer;
 }
 /* .navbuttons a:hover{
     color: transparent;
@@ -1103,6 +1104,10 @@ nav{
         top: 0;
         border-radius: 2rem 0;
         cursor: pointer;
+    }
+    .price p{
+        font-size: 1.2rem;
+        text-align: center;
     }
     .plan_features{
         top: 1vh;
